simple/test/features/errors/control_flow/e1101_break_outside_loop.spl
# E1101: Break Outside Loop

Feature: E1101 - Break Can Only Be Used Inside a Loop
  As a Simple compiler
  I want to detect break statements outside loops
  So that break is only used in valid contexts

  Background:
    Given I have the Simple compiler

  Scenario: Break in function body
    When I compile:
      '''
      fn test():
        break  # Error: not in a loop
      '''
    Then I should see error E1101 at line 2
    And the error message should be "`break` can only be used inside a loop"
    And the label should indicate "not in a loop"
    And the help should suggest "use `break` inside `for`, `while`, or `loop` statements"

  Scenario: Break in if statement
    When I compile:
      '''
      fn test():
        if true:
          break  # Error: not in a loop
      '''
    Then I should see error E1101

  Scenario: Valid break in loop
    When I compile:
      '''
      fn test():
        loop:
          break  # OK: inside loop

        for x in 0..10:
          if x > 5:
            break  # OK: inside for loop
      '''
    Then compilation should succeed

  Scenario: Korean language error
    Given I set compiler language to "ko"
    When I compile:
      '''
      fn test():
        break
      '''
    Then I should see error E1101
    And the error message should contain "루프 외부의 break"
